# mcp-server

./: .gitignore  DEVELOPER_GUIDE.md  README.md  mcpServer.py  pyproject.toml
opensearch/: helper.py  tester.py
src/mcp_server_opensearch/: __init__.py  __main__.py  mcpServer.py  sseServer.py  sse_server.py  stdio_server.py
src/opensearch/: client.py  helper.py
src/tools/: tool_tester.py  tools.py
tests/: conftest.py
tests/mcp_server_opensearch/: test_sse_server.py  test_stdio_server.py
tests/opensearch/: test_client.py  test_helper.py
tests/tools/: test_tools.py
tools/: tools.py
