[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.3",
    "mcp[cli]>=1.6.0",
    "opensearch-py>=2.8.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests-aws4auth>=1.3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp-server-opensearch = "mcp_server_opensearch:main"  # Importable path